# voxeliser

./: Cargo.toml  README.md
shaders/: v.glsl
src/: main.rs  model.rs  renderer.rs  voxeliser.rs
src/model/: loader.rs  vertex.rs
src/renderer/: camera.rs  shader.rs
