[package]
name = "voxeliser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.31.0"

egui = "0.17.0"
egui-winit = { version = "0.17.0", default-features = false }
egui_glium = { version = "0.17.0", default-features = false, features = ["clipboard", "epi", "links"]}

# Maths
glam = "0.21.2"

log = "0.4.0"
env_logger = "0.9.0"

glium_app = { git = "https://github.com/Bash-09/glium-app" }

easy-gltf = "0.1.4"
obj-rs = "0.7.0"
rfd = "0.10.0"
threadpool = "1.8.1"